Rework ContentStyleProvider defaults props and fix Flex component default gap

--- a/packages/react-components/src/layout/src/Flex.css
+++ b/packages/react-components/src/layout/src/Flex.css
@@ -1,5 +1,6 @@
 /* FLEX */
 .o-ui-flex {
+    --o-ui-gap: normal;
     display: flex;
     gap: var(--o-ui-gap);
 }
